catkin_ws/logs/backend/build.make.622.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:257:4: error: ‘fileStorage’ was not declared in this scope
    fileStorage << fileName << endl;
    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:259:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    for (int i = 0; i < frame.getKeypoints().size();i++)
                                                  ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
